--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ASIA3XF7UZAYSIZBPYNX
+        aws-secret-access-key: anEANmVQpA8wePVPRyVb1W+1jwXRhQM9VtAT7xsQ
         aws-region: us-east-1
 
     - name: Zip application
