--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches:
       - master  # Substitua pela branch que dispara o deploy
-
+      
+env:
+  AWS_REGION: ${{ env.AWS_REGION }}   
+permissions:
+      id-token: write   # This is required for requesting the JWT
+      contents: read  
 jobs:
   deploy:
     runs-on: ubuntu-latest
