--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,12 @@ name: Deploy to Elastic Beanstalk
 on:
   push:
     branches:
-      - master  # Substitua pela branch que dispara o deploy
-      
+      - master  # Substitua pela branch que dispara o deploy    
 env:
   AWS_REGION: us-east-1  
 permissions:
       id-token: write   # This is required for requesting the JWT
-      contents: read  
+      contents: write  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,7 +18,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@maste
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
