--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
 permissions:
       id-token: write   # This is required for requesting the JWT
       contents: write  
+env:
+  ACTIONS_STEP_DEBUG: true
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
