--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,14 @@ on:
     branches:
       - main  # Substitua pela branch que dispara o deploy    
       
+env:
+  # AWS Region
+  AWS_REGION: us-east-1
+  
 permissions:
   id-token: write   # This is required for requesting the JWT
-  contents: write  
-env:
-  ACTIONS_STEP_DEBUG: true
+  contents: read  
+
   
 jobs:
   deploy:
@@ -22,11 +25,9 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-skip-session-tagging: true
-        audience: sts.amazonaws.com.cn
-        aws-region: us-east-1
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
         
 
     - name: Zip application
