--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main  # Substitua pela branch que dispara o deploy    
-      
-env:
-  # AWS Region
-  AWS_REGION: us-east-1
   
 permissions:
   id-token: write   # This is required for requesting the JWT
@@ -27,7 +23,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+        aws-region: us-east-1
         
 
     - name: Zip application
